--- a/slavetime.html
+++ b/slavetime.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-
+하이하이
 </head>
 <body>
-    하이
+
   <script>
   let today = new Date();
   let year = today.getFullYear(); // 년도
